Issue #118: Improving presentation of events, posts, with spacing, color and layout adjusts.

--- a/src/main/webapp/resources/css/default_theme.css
+++ b/src/main/webapp/resources/css/default_theme.css
@@ -66,3 +66,6 @@ body {
     vertical-align: top;
     padding-top: 6px;
 }
+
+.item { width: 365px; }
+#container .grid-sizer { width: 365px; }
